--- a/css/style.css
+++ b/css/style.css
@@ -2,83 +2,113 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    
 }
 
-body{
-    height: 100vh;
+@font-face {
+    font-family: jujutsu-font ;
+    src: url(../fonts/jujutsu-kaisen.ttf);
 }
 
-#menu{
+
+body {
+    
+    font-family: jujutsu-font;
+}
+
+.title{
+    font-family: jujutsu-font;
+    font-size: 2em;
+    color: white;
+    text-shadow:  1px 1px 3px red;
+}
+
+#index-main {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
     background:url(../img/bg/wallpaper-back.jpeg) no-repeat center center;
     background-size: cover;
-    height: 100vh;
+    height: 94vh;
 }
 
-#menu > a > button{
+#index-main > a > button{
     width: 250px;
     height: 100px;
+    font-size: 1.8em;
+    border-radius: 5px;
+    transition: 0.10ms;
+    font-family: jujutsu-font;
+}
+
+#index-main > a > button:hover {
+    color: white;
+    background-color: darkgray;
+}
+
+.screen-selection{
+    width: 100vw;
+    height: 94vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: black;
 }
 
 #character-selection{
+    padding: 10px;
+    width: 650px;
+    height: 600px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: rgb(19, 19, 19);
-}
-
-#selection-space{
-    display:flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
-    gap: 20px;
-    width: 50vw;
-    height: 90vh;
-    background-color: gray;
+    row-gap: 10px;
+    background-color: black;
 }
 
-.persona-space{
-    margin: auto;
-    width: 170px;
-    height: 170px;
+.character{
+    width: 250px;
+    height: 250px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
-.persona-name{
-    margin-top: 150px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: bolder;
-    color: white;
-    background-color: red;
-    border: 1px solid white;
-    padding: 5px;
-    text-align: center;
-    border-radius: 0px 0px 10px 10px;
+#persona-image > img{
+    width: 250px;
+    height: 250px;
 }
 
 .persona-view{
     display: block;
-    width: 25vw;
-    height: 90vh;
-    background-color: aquamarine;
+    width: 350px;
+    height: 94vh;
+    background-color: rgb(59, 48, 90);
 }
 
-#persona-image > img {
-    width: 25vw;
-    height: 90vh;
+.persona-view > img{
+    display: block;
+    width: 350px;
+    height: 94vh;
 }
 
-#persona-imagead > img {
-    width: 25vw;
-    height: 90vh;
+#play-game {
+    position: absolute;
+    left: 650px;
+    top: 600px;
+    width: 100px;
+    height: 30px;
 }
 
-#satoru{
+#play-game:hover {
+    color: white;
+    font-weight: bolder;
+    text-shadow: 1px 1px 1px black;
+    background-color: gray;
+}
+
+#satoro{
     background: url(../img/bg/satoru-image.jpeg) no-repeat center center;
     background-size: cover;
 }
@@ -95,27 +125,69 @@ body{
 
 #main-menu{
     width: 100vw;
-    height: 95vh;
+    height: 93vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: black;
+    overflow: hidden;
 }
 
 #game-screen{
-    width: 95vw;
-    height: 650px;
+    width: 100vw;
+    height: 600px;
     border: 1px solid black;
     background: url(../img/bg/fukuna-misushi-background.jpg) no-repeat center center;
     background-size: cover;
-
+    overflow: hidden;
 }
 
 #player{
     position: absolute;
-    
 }
 
 #player > img {
     width: 400px;
     height: 300px;
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap ;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    background-color: rgb(43, 11, 73);
+}
+
+footer #contatos, #anotthergames {
+    width: 50vw;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-left: 2px solid white;
+    background-color: rgb(54, 13, 92);
+    
+}
+
+p.footer-title{
+    font-weight: bolder;
+    text-decoration: underline;
+    text-shadow: 1px 1px 1px black;
+}
+
+footer  a{
+    color: white;
+    text-decoration: none;
+}
+
+footer a:hover {
+    font-weight: bolder;
+}
+
+#div-tag{
+    padding: 20px;
 }
